Migrate java 21 & spring boot 3+